libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/use-2.jsonc
//@ run: fail
//@ description: use/2 should error out
["::kernel::special_form::use", "::math", { "#tuple": ["pi"] }]
//~^ ERROR expected 3 arguments to `use`, found 2
